# cpp-learning-lab

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-build.yml
docs/: build-guide.md  code-style.md  coverage-map.md  cpp-standard-policy.md  debugging-guide.md  repo-roadmap.md  topic-template.md
en/: LEARNING_PATH.md  README.md  REFERENCE_INDEX.md
en/00_toolchain/: README.md  hello_modern_cpp.cpp
en/01_basics/: README.md  types_and_initialization.cpp
en/02_functions_references/: README.md
en/03_classes_oop/: README.md  class_invariants.cpp  object_slicing_warning.cpp  polymorphism_virtual_destructor.cpp
en/04_raii_memory/: README.md  raii_unique_ptr.cpp
en/05_stl/: README.md  vector_algorithm_basics.cpp
en/06_smart_pointers/: README.md  unique_shared_weak.cpp
en/07_move_semantics/: README.md  rule_of_zero_and_move.cpp
en/08_error_handling/: README.md  optional_exceptions_status.cpp
en/09_file_io/: README.md  file_stream_records.cpp
en/10_templates/: README.md  template_repository.cpp
en/11_low_level_cpp/: README.md  bytes_alignment_flags.cpp
en/12_concurrency/: README.md  thread_safe_counter.cpp
en/13_patterns_architecture/: README.md  strategy_pattern.cpp
en/14_core_language_details/: README.md  scope_enum_static.cpp
en/15_strings_views/: README.md  string_string_view.cpp
en/16_containers_iterators/: README.md  map_set_iterator.cpp
en/17_lambdas_algorithms/: README.md  lambda_algorithm_pipeline.cpp
en/18_compile_time_constexpr/: README.md  constexpr_lookup.cpp
en/19_variant_tuple_enum/: README.md
en/20_operator_overloading/: README.md  value_type_operator.cpp
en/21_namespaces_headers/: README.md
en/22_casts_type_safety/: README.md  casts_type_safety.cpp
en/23_testing_practices/: README.md  simple_test_harness.cpp
en/24_filesystem_chrono/: README.md  filesystem_chrono.cpp
en/25_atomics_intro/: README.md  atomic_counter.cpp
en/projects/bank_account_oop/: CMakeLists.txt  README.md
en/projects/bank_account_oop/src/: bank_account.cpp  main.cpp
en/projects/bank_account_oop/tests/: test_bank_account.cpp
tr/: LEARNING_PATH.md  README.md  REFERENCE_INDEX.md
tr/00_toolchain/: README.md  hello_modern_cpp.cpp
tr/01_basics/: README.md  types_and_initialization.cpp
tr/02_functions_references/: README.md  references_const_correctness.cpp
tr/03_classes_oop/: README.md  class_invariants.cpp  object_slicing_warning.cpp  polymorphism_virtual_destructor.cpp
tr/04_raii_memory/: README.md  raii_unique_ptr.cpp
tr/05_stl/: README.md  vector_algorithm_basics.cpp
tr/06_smart_pointers/: README.md  unique_shared_weak.cpp
tr/07_move_semantics/: README.md  rule_of_zero_and_move.cpp
tr/08_error_handling/: README.md  optional_exceptions_status.cpp
tr/09_file_io/: README.md  file_stream_records.cpp
tr/10_templates/: README.md
tr/11_low_level_cpp/: README.md  bytes_alignment_flags.cpp
tr/12_concurrency/: README.md
tr/13_patterns_architecture/: README.md  strategy_pattern.cpp
tr/14_core_language_details/: README.md  scope_enum_static.cpp
tr/15_strings_views/: README.md  string_string_view.cpp
tr/16_containers_iterators/: README.md  map_set_iterator.cpp
tr/17_lambdas_algorithms/: README.md  lambda_algorithm_pipeline.cpp
tr/18_compile_time_constexpr/: README.md  constexpr_lookup.cpp
tr/19_variant_tuple_enum/: README.md  variant_tuple_enum.cpp
tr/20_operator_overloading/: README.md  value_type_operator.cpp
tr/21_namespaces_headers/: README.md  namespace_api_design.cpp
tr/22_casts_type_safety/: README.md  casts_type_safety.cpp
tr/23_testing_practices/: README.md  simple_test_harness.cpp
tr/24_filesystem_chrono/: README.md  filesystem_chrono.cpp
tr/25_atomics_intro/: README.md
tr/projects/bank_account_oop/: CMakeLists.txt  README.md
tr/projects/bank_account_oop/include/: bank_account.h
tr/projects/bank_account_oop/src/: bank_account.cpp  main.cpp
