cmake_minimum_required(VERSION 3.20)

project(cpp_learning_lab VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" OFF)

function(cpp_lab_apply_warnings target_name)
    if(MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
        if(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS)
            target_compile_options(${target_name} PRIVATE /WX)
        endif()
    else()
        target_compile_options(
            ${target_name}
            PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow
        )
        if(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS)
            target_compile_options(${target_name} PRIVATE -Werror)
        endif()
    endif()
endfunction()

function(cpp_lab_add_executable target_name)
    add_executable(${target_name} ${ARGN})
    target_compile_features(${target_name} PRIVATE cxx_std_17)
    cpp_lab_apply_warnings(${target_name})
endfunction()

function(cpp_lab_add_library target_name)
    add_library(${target_name} ${ARGN})
    target_compile_features(${target_name} PUBLIC cxx_std_17)
    cpp_lab_apply_warnings(${target_name})
endfunction()

enable_testing()

cpp_lab_add_executable(en_00_hello en/00_toolchain/hello_modern_cpp.cpp)
cpp_lab_add_executable(en_01_types en/01_basics/types_and_initialization.cpp)
cpp_lab_add_executable(en_02_references en/02_functions_references/references_const_correctness.cpp)
cpp_lab_add_executable(en_03_class_invariants en/03_classes_oop/class_invariants.cpp)
cpp_lab_add_executable(en_03_polymorphism en/03_classes_oop/polymorphism_virtual_destructor.cpp)
cpp_lab_add_executable(en_03_object_slicing en/03_classes_oop/object_slicing_warning.cpp)
cpp_lab_add_executable(en_04_raii en/04_raii_memory/raii_unique_ptr.cpp)
cpp_lab_add_executable(en_05_stl en/05_stl/vector_algorithm_basics.cpp)
cpp_lab_add_executable(en_06_smart_pointers en/06_smart_pointers/unique_shared_weak.cpp)
cpp_lab_add_executable(en_07_move_semantics en/07_move_semantics/rule_of_zero_and_move.cpp)
cpp_lab_add_executable(en_08_error_handling en/08_error_handling/optional_exceptions_status.cpp)
cpp_lab_add_executable(en_09_file_io en/09_file_io/file_stream_records.cpp)
cpp_lab_add_executable(en_10_templates en/10_templates/template_repository.cpp)
cpp_lab_add_executable(en_11_low_level en/11_low_level_cpp/bytes_alignment_flags.cpp)
cpp_lab_add_executable(en_12_concurrency en/12_concurrency/thread_safe_counter.cpp)
cpp_lab_add_executable(en_13_patterns en/13_patterns_architecture/strategy_pattern.cpp)

cpp_lab_add_executable(tr_00_merhaba tr/00_toolchain/hello_modern_cpp.cpp)
cpp_lab_add_executable(tr_01_tipler tr/01_basics/types_and_initialization.cpp)
cpp_lab_add_executable(tr_02_referanslar tr/02_functions_references/references_const_correctness.cpp)
cpp_lab_add_executable(tr_03_sinif_kurallari tr/03_classes_oop/class_invariants.cpp)
cpp_lab_add_executable(tr_03_polimorfizm tr/03_classes_oop/polymorphism_virtual_destructor.cpp)
cpp_lab_add_executable(tr_03_object_slicing tr/03_classes_oop/object_slicing_warning.cpp)
cpp_lab_add_executable(tr_04_raii tr/04_raii_memory/raii_unique_ptr.cpp)
cpp_lab_add_executable(tr_05_stl tr/05_stl/vector_algorithm_basics.cpp)
cpp_lab_add_executable(tr_06_smart_pointerlar tr/06_smart_pointers/unique_shared_weak.cpp)
cpp_lab_add_executable(tr_07_move_semantics tr/07_move_semantics/rule_of_zero_and_move.cpp)
cpp_lab_add_executable(tr_08_hata_yonetimi tr/08_error_handling/optional_exceptions_status.cpp)
cpp_lab_add_executable(tr_09_file_io tr/09_file_io/file_stream_records.cpp)
cpp_lab_add_executable(tr_10_templates tr/10_templates/template_repository.cpp)
cpp_lab_add_executable(tr_11_low_level tr/11_low_level_cpp/bytes_alignment_flags.cpp)
cpp_lab_add_executable(tr_12_concurrency tr/12_concurrency/thread_safe_counter.cpp)
cpp_lab_add_executable(tr_13_patterns tr/13_patterns_architecture/strategy_pattern.cpp)

add_subdirectory(en/projects/bank_account_oop)
add_subdirectory(tr/projects/bank_account_oop)
