cmake_minimum_required(VERSION 3.20)

project(cpp_learning_lab VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS "Treat compiler warnings as errors" OFF)

function(cpp_lab_apply_warnings target_name)
    if(MSVC)
        target_compile_options(${target_name} PRIVATE /W4 /permissive-)
        if(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS)
            target_compile_options(${target_name} PRIVATE /WX)
        endif()
    else()
        target_compile_options(
            ${target_name}
            PRIVATE -Wall -Wextra -Wpedantic -Wconversion -Wshadow
        )
        if(CPP_LEARNING_LAB_WARNINGS_AS_ERRORS)
            target_compile_options(${target_name} PRIVATE -Werror)
        endif()
    endif()
endfunction()

function(cpp_lab_add_executable target_name)
    add_executable(${target_name} ${ARGN})
    target_compile_features(${target_name} PRIVATE cxx_std_17)
    cpp_lab_apply_warnings(${target_name})
endfunction()

function(cpp_lab_add_library target_name)
    add_library(${target_name} ${ARGN})
    target_compile_features(${target_name} PUBLIC cxx_std_17)
    cpp_lab_apply_warnings(${target_name})
endfunction()

enable_testing()

cpp_lab_add_executable(en_00_hello en/00_toolchain/hello_modern_cpp.cpp)
cpp_lab_add_executable(en_01_types en/01_basics/types_and_initialization.cpp)
cpp_lab_add_executable(en_02_references en/02_functions_references/references_const_correctness.cpp)
cpp_lab_add_executable(en_03_class_invariants en/03_classes_oop/class_invariants.cpp)
cpp_lab_add_executable(en_03_polymorphism en/03_classes_oop/polymorphism_virtual_destructor.cpp)
cpp_lab_add_executable(en_03_object_slicing en/03_classes_oop/object_slicing_warning.cpp)
cpp_lab_add_executable(en_04_raii en/04_raii_memory/raii_unique_ptr.cpp)
cpp_lab_add_executable(en_05_stl en/05_stl/vector_algorithm_basics.cpp)
cpp_lab_add_executable(en_06_smart_pointers en/06_smart_pointers/unique_shared_weak.cpp)
cpp_lab_add_executable(en_07_move_semantics en/07_move_semantics/rule_of_zero_and_move.cpp)
cpp_lab_add_executable(en_08_error_handling en/08_error_handling/optional_exceptions_status.cpp)
cpp_lab_add_executable(en_09_file_io en/09_file_io/file_stream_records.cpp)
cpp_lab_add_executable(en_10_templates en/10_templates/template_repository.cpp)
cpp_lab_add_executable(en_11_low_level en/11_low_level_cpp/bytes_alignment_flags.cpp)
cpp_lab_add_executable(en_12_concurrency en/12_concurrency/thread_safe_counter.cpp)
cpp_lab_add_executable(en_13_patterns en/13_patterns_architecture/strategy_pattern.cpp)
cpp_lab_add_executable(en_14_core_language en/14_core_language_details/scope_enum_static.cpp)
cpp_lab_add_executable(en_15_strings_views en/15_strings_views/string_string_view.cpp)
cpp_lab_add_executable(en_16_containers en/16_containers_iterators/map_set_iterator.cpp)
cpp_lab_add_executable(en_17_lambdas en/17_lambdas_algorithms/lambda_algorithm_pipeline.cpp)
cpp_lab_add_executable(en_18_constexpr en/18_compile_time_constexpr/constexpr_lookup.cpp)
cpp_lab_add_executable(en_19_variant_tuple en/19_variant_tuple_enum/variant_tuple_enum.cpp)
cpp_lab_add_executable(en_20_operator_overloading en/20_operator_overloading/value_type_operator.cpp)
cpp_lab_add_executable(en_21_namespaces en/21_namespaces_headers/namespace_api_design.cpp)
cpp_lab_add_executable(en_22_casts en/22_casts_type_safety/casts_type_safety.cpp)
cpp_lab_add_executable(en_23_testing en/23_testing_practices/simple_test_harness.cpp)
cpp_lab_add_executable(en_24_filesystem_chrono en/24_filesystem_chrono/filesystem_chrono.cpp)
cpp_lab_add_executable(en_25_atomics en/25_atomics_intro/atomic_counter.cpp)

cpp_lab_add_executable(tr_00_merhaba tr/00_toolchain/hello_modern_cpp.cpp)
cpp_lab_add_executable(tr_01_tipler tr/01_basics/types_and_initialization.cpp)
cpp_lab_add_executable(tr_02_referanslar tr/02_functions_references/references_const_correctness.cpp)
cpp_lab_add_executable(tr_03_sinif_kurallari tr/03_classes_oop/class_invariants.cpp)
cpp_lab_add_executable(tr_03_polimorfizm tr/03_classes_oop/polymorphism_virtual_destructor.cpp)
cpp_lab_add_executable(tr_03_object_slicing tr/03_classes_oop/object_slicing_warning.cpp)
cpp_lab_add_executable(tr_04_raii tr/04_raii_memory/raii_unique_ptr.cpp)
cpp_lab_add_executable(tr_05_stl tr/05_stl/vector_algorithm_basics.cpp)
cpp_lab_add_executable(tr_06_smart_pointerlar tr/06_smart_pointers/unique_shared_weak.cpp)
cpp_lab_add_executable(tr_07_move_semantics tr/07_move_semantics/rule_of_zero_and_move.cpp)
cpp_lab_add_executable(tr_08_hata_yonetimi tr/08_error_handling/optional_exceptions_status.cpp)
cpp_lab_add_executable(tr_09_file_io tr/09_file_io/file_stream_records.cpp)
cpp_lab_add_executable(tr_10_templates tr/10_templates/template_repository.cpp)
cpp_lab_add_executable(tr_11_low_level tr/11_low_level_cpp/bytes_alignment_flags.cpp)
cpp_lab_add_executable(tr_12_concurrency tr/12_concurrency/thread_safe_counter.cpp)
cpp_lab_add_executable(tr_13_patterns tr/13_patterns_architecture/strategy_pattern.cpp)
cpp_lab_add_executable(tr_14_core_language tr/14_core_language_details/scope_enum_static.cpp)
cpp_lab_add_executable(tr_15_strings_views tr/15_strings_views/string_string_view.cpp)
cpp_lab_add_executable(tr_16_containers tr/16_containers_iterators/map_set_iterator.cpp)
cpp_lab_add_executable(tr_17_lambdas tr/17_lambdas_algorithms/lambda_algorithm_pipeline.cpp)
cpp_lab_add_executable(tr_18_constexpr tr/18_compile_time_constexpr/constexpr_lookup.cpp)
cpp_lab_add_executable(tr_19_variant_tuple tr/19_variant_tuple_enum/variant_tuple_enum.cpp)
cpp_lab_add_executable(tr_20_operator_overloading tr/20_operator_overloading/value_type_operator.cpp)
cpp_lab_add_executable(tr_21_namespaces tr/21_namespaces_headers/namespace_api_design.cpp)
cpp_lab_add_executable(tr_22_casts tr/22_casts_type_safety/casts_type_safety.cpp)
cpp_lab_add_executable(tr_23_testing tr/23_testing_practices/simple_test_harness.cpp)
cpp_lab_add_executable(tr_24_filesystem_chrono tr/24_filesystem_chrono/filesystem_chrono.cpp)
cpp_lab_add_executable(tr_25_atomics tr/25_atomics_intro/atomic_counter.cpp)

add_subdirectory(en/projects/bank_account_oop)
add_subdirectory(tr/projects/bank_account_oop)
